--- a/pages/home.html
+++ b/pages/home.html
@@ -43,3 +43,21 @@
         </div>
     </div>
 </article>
+<article>
+    <div class="container p-4">
+        <h2 class="text-center text-primary">Bienvenue au quai Antique</h2>
+        <div class="row row-cols-2 align-items-center">
+            <div class="col">
+                <p class="text-justify">
+                   Vous pouvez directement réserver votre table en cliquant sur le bouton ci-dessous
+                </p>
+            </div>
+            <div class="col">
+                <img class="w-100 rounded" src="../images/red-wine-2443699_1280.jpg"/>
+            </div>
+        </div>
+        <div class="text-center pt-4">
+            <a href="#" class="btn btn-primary">Réserver</a>
+        </div>
+    </div>
+</article>
