--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/main.css">
-    <script type="module" src="router/router.js" defer></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+
     <title>Quai Antique</title>
 </head>
 
@@ -48,7 +47,6 @@
     </header>
 
     <main id="main-page">
-
     </main>
     <footer class="bg-dark text-white text-center footer">
         <div class="row">
@@ -68,6 +66,8 @@
             </div>
         </div>
     </footer>
+    <script type="module" src="Router/router.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
