--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -1,41 +1,43 @@
 <div class="hero-scene text-center text-white">
-    <div class="hero-scene-content">
-        <h1>Galerie</h1>
-    </div>
+  <div class="hero-scene-content">
+    <h1>Galerie</h1>
+  </div>
 </div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/ai-generated-8520388_1280.png" class="rounded w-100"/>
+
+<div class="container">
+  <div class="row row-cols-2 row-cols-lg-3">
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img
+          src="../images/ai-generated-8520388_1280.png"
+          class="rounded w-100"
+        />
         <p class="titre-image">Titre</p>
+      </div>
     </div>
-</div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/food-2127191_1280.jpg" class="rounded w-100"/>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/food-2127191_1280.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+      </div>
     </div>
-</div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/food-712665_1280.jpg" class="rounded w-100"/>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/food-712665_1280.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+      </div>
     </div>
-</div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/food-7418442_1280.jpg" class="rounded w-100"/>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/food-7418442_1280.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+      </div>
     </div>
-</div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/green-2596087_1280.jpg" class="rounded w-100"/>
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../images/red-wine-2443699_1280.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+      </div>
     </div>
-</div>
-<div class="col p-3">
-    <div class="image-card text-white">
-        <img src="../images/red-wine-2443699_1280.jpg" class="rounded w-100"/>
-        <p class="titre-image">Titre</p>
-    </div>
+  </div>
 </div>
