--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
         <div class="row">
             <div class="col-12 col-lg-4">
                 <h3 class="text-primary">Nos horaires</h3>
-                <p>Du mardi au dimanche  12:00-14:00  18:00-23:00</p>
+                <p>Du mardi au dimanche  12h00-14h00  19h00-21h00</p>
             </div>
             <div class="col-6 col-lg-4">
                 <p>Quai Antique <br/>
-                    5 rue de la route <br/>
-                    31150 Ville <br/>
+                    5 rue principale <br/>
+                    73000 Chambéry<br/>
                     04 01 01 01 01 <br/>
                 </p>
             </div>
             <div class="col-6 col-lg-4">
-                <p>test</p>
+                <p>contact@quaiantique.com</p>
             </div>
         </div>
     </footer>
