--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,7 @@
         <div class="row row-cols-2 align-items-center">
             <div class="col">
                 <p class="text-justify">
-                    Bienvenue sur le site de notre restaurant gastronomique situé au cœur de la magnifique ville de Chambéry. Le chef Arnaut Michant vous invite à découvrir un voyage culinaire mémorable.
+                    Bienvenue sur le site de notre restaurant gastronomique situé à Chambéry situé au coeur des montagnes. Le chef Arnaut Michant vous invite à un voyage dégustatif.
                 </p>
             </div>
             <div class="col">
@@ -30,11 +30,11 @@
         <h2 class="text-center text-primary">Des produits frais</h2>
         <div class="row row-cols-2 align-items-center">
             <div class="col">
-                <img class="w-100 rounded" src="../images/green-2596087_1280.jpg"/>
+                <img class="w-100 rounded img-portrait" src="../images/green-2596087_1280.jpg"/>
             </div>
             <div class="col">
                 <p class="text-justify">
-                    Découvrez la richesse des saveurs avec nos plats élaborés à partir de produits frais et de saison, cueillis localement.
+                    Découvrez la richesse des saveurs avec nos plats élaborés à partir de produits frais et locaux.
                 </p>
             </div>
         </div>
@@ -45,7 +45,7 @@
 </article>
 <article>
     <div class="container p-4">
-        <h2 class="text-center text-primary">Bienvenue au quai Antique</h2>
+        <h2 class="text-center text-primary">Réservation en ligne</h2>
         <div class="row row-cols-2 align-items-center">
             <div class="col">
                 <p class="text-justify">
