--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/account">Mon compte</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/signin">Connexion</a>
+                  <li class="nav-item" data-show="disconnected">
+                    <a class="nav-link" href="/signin" >Connexion</a>
+                  </li>
+                  <li class="nav-item" data-show ="connected">
+                    <button class="nav-link" id="signoutBtn" >Déconnexion</button>
                   </li>
                 </ul>
               </div>
@@ -66,7 +69,8 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="Router/router.js"></script>
+    <script src="/js/script.js"></script>
+    <script type="module" src="/Router/router.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
