--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -16,8 +16,8 @@
           class="rounded w-100"
         />
         <p class="titre-image">Titre</p>
-        <div class="action-image-buttons">
-          <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
+        <div class="action-image-buttons" data-show="admin">
+          <button  type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal"><i class="bi bi-pencil-square"></i></button>
           <button type="button" class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#DeletePhotoModal"><i class="bi bi-trash"></i></button>
       </div>
       </div>
